Fix `pre` text formatting and overflow
Don't visually break `pre` text over multiple lines.

Trigger a scrollbar when the preformatted text is too wide for its
container.

--- a/normalize.css
+++ b/normalize.css
@@ -172,11 +172,11 @@ samp {
 }
 
 /**
- * Improve readability of pre-formatted text in all browsers.
+ * Contain overflow in all browsers.
  */
 
 pre {
-  white-space: pre-wrap;
+  overflow: auto;
 }
 
 /**
